# content_profile

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile.proxy  LICENSE  README.md  build.rs  build.sh  docker-compose.yml  proxy.Dockerfile  test_debug.rs  ui.Dockerfile
.agents/skills/dioxus-07/: SKILL.md
.agents/skills/docker-compose/: SKILL.md
.agents/skills/playwright-cli/: SKILL.md
.plans/: 00.md  01_planning_auth_supabase.md  01_tag_filtering_and_dashboard_refactoring.md  02_token_cookie_storage.md  03_login_supabase_examples.md  04_AUTH.md  05_signup_implementation.md  06_login_simplification.md  07_content_formatting.md  08_tag_deletion_modal_improvements.md  09_pagination_implementation.md  10_image_upload_google_drive.md  11_markdown_layout.md
.skill/: dioxus_skill.md  supabase_skill.md
.supabase/: README.md
.supabase/data/: content_data.csv  content_tags.csv  content_tags_data.csv  tags.csv  tags_data.csv  tags_max_autoid.sql
content_proxy/: Cargo.toml
content_proxy/src/: main.rs
content_sdk/: Cargo.toml  skill.md
content_sdk/src/: lib.rs
content_sdk/src/contexts/: content_context.rs  content_tags_context.rs  mod.rs  tag_context.rs  user_context.rs
content_sdk/src/hooks/: mod.rs  use_content.rs  use_content_tags.rs  use_tags.rs
content_sdk/src/models/: content.rs  content_tag.rs  mod.rs  tag.rs
content_sdk/src/pagination/: mod.rs
content_sdk/src/services/: auth.rs  content.rs  drive.rs  local_storage.rs  mod.rs  session.rs  supabase.rs  tag.rs
content_sdk/src/utils/: config.rs  markdown.rs  mod.rs
content_ui/: Cargo.toml  build.rs  package-lock.json
content_ui/assets/: markdown.css  tailwind.css
content_ui/src/: app.rs  main.rs  routes.rs
content_ui/src/components/: content_detail.rs  content_form.rs  content_list.rs  main_layout.rs  mod.rs  navbar.rs  notification_card.rs  stat_card.rs
content_ui/src/contexts/: content_context.rs  mod.rs  sync_context.rs  tag_context.rs  user_context.rs
content_ui/src/models/: auth.rs  content.rs  mod.rs
content_ui/src/pages/: content_edit.rs  content_list.rs  dashboard.rs  login.rs  mod.rs  tags_edit.rs  tags_list.rs
content_ui/src/services/: auth.rs  content.rs  local_storage.rs  mod.rs  session.rs  supabase.rs  sync.rs  tag.rs
content_ui/src/utils/: config.rs  markdown.rs
examples/: gloo.rs  login.rs
playwright_cli/: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  package.json  playwright.config.ts  tsconfig.json
playwright_cli/tests/: dashboard.spec.ts  home.spec.ts
playwright_cli/tests/fixtures/: auth.ts  supabaseMock.ts
src/: routes.rs
src/components/: mod.rs  navbar.rs
src/contexts/: mod.rs
src/models/: content_tag.rs  tag.rs
src/pages/: home.rs  login.rs
src/services/: auth.rs  local_storage.rs  mod.rs  session.rs  supabase.rs  tag.rs
src/utils/: config.rs
supabase_client/: Cargo.toml
supabase_client/src/: client.rs  config.rs  lib.rs  models.rs
