[package]
name = "content_profile"
version = "0.1.0"
authors = ["lidm0707 <lightdemon17@gmail.com>"]
edition = "2024"



[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = "0.3"
lazy_static = "1.4"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
regex = "1.10"
url = "2.5"
base64 = "0.22"
dotenvy = "0.15.7"
tracing = "0.1"
log = "0.4.29"
tracing-wasm = "0.2"
console_log = "1.0"
tokio = { version = "1.40", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"], optional = true }
csv = "1.3"
anyhow = "1.0"
getrandom = { version = "0.2", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "getrandom/js"]
desktop = ["dioxus/desktop", "getrandom"]
mobile = ["dioxus/mobile", "getrandom"]
server = ["dioxus/server", "tokio", "sqlx", "getrandom"]

[build-dependencies]
dotenvy = "0.15"
