[workspace]
members = [
    "content_ui",
    "supabase_client",
    "content_sdk",
    "content_proxy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["lidm0707 <lightdemon17@gmail.com>"]
edition = "2024"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"

# Supabase client dependencies
gloo-net = { version = "0.6", features = ["http"] }
regex = "1.10"
url = "2.5"
# UI dependencies
dioxus = { version = "0.7", features = ["web","router"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
gloo-timers = "0.3"
lazy_static = "1.4"
base64 = "0.22"
log = "0.4.29"
tracing-wasm = "0.2"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
dotenvy = "0.15"
