[package]
name = "content_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dioxus framework
dioxus = { version = "0.7", features = ["router", "web"] }
dioxus-logger = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP client for web
gloo-net = { version = "0.7", features = ["http"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

# Markdown processing
pulldown-cmark = "0.13.3"

# Supabase client for content management
supabase_client = { path = "../supabase_client" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
[build-dependencies]
