[package]
name = "content_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dioxus dependencies
dioxus = { version = "0.7", features = ["web","router"] }

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
log = "0.4.29"

anyhow = "1.0"

# Content SDK
content_sdk = { path = "../content_sdk" }

# Supabase client dependency
supabase_client = { path = "../supabase_client" }

# Web dependencies

web-sys = { version = "0.3", features = ["Window", "Storage"] }
lazy_static = "1.4"
base64 = "0.22"
console_log = "1.0"
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"], optional = true }
url = "2.5"
pulldown-cmark = "0.13.3"
gloo-net = { version = "0.7", features = ["http"] }
gloo-timers = "0.3"


[features]
default = ["web"]
web = ["dioxus/web", "getrandom/js"]


[build-dependencies]
dotenvy = "0.15"
